# myogcollection

./: .env  Cargo.toml  Makefile  README.md  build.sh  compose.yaml  db_build.sh  db_destroy.sh  db_seed.sh  dev.sh  go.mod  go.sum  main.go
api/: login.go  patternComment.go  patternDelete.go  patternModify.go  patternUpload.go  registration.go  userDelete.go  userModify.go
app/: Cargo.toml
app/src/: main.rs  password_manager.rs
app/src/middlewares/: auth.rs
app/src/routes/: get_index.rs  get_login.rs  post_login.rs  post_pattern.rs  post_signup.rs
cmd/DBbuild/: main.go
cmd/DBdestroy/: main.go
cmd/DBseed/: main.go
cmd/main/: main.go
database/: build.go  connection.go  destroy.go  seed.go
database/tables/: comments.sql  pattern.sql  user.sql
datatypes/: Cargo.toml
datatypes/src/: lib.rs
db_build/: Cargo.toml
db_build/src/: build.sql  destroy.sql  main.rs
db_destroy/: Cargo.toml
db_destroy/src/: main.rs
db_seed/: Cargo.toml
db_seed/src/: main.rs
middleware/: auth.go  test.go
routes/: error.go
sqls/: docker_build_db.sql
src/: main.rs  routes.rs  structs.rs
src/database/: build.rs  build.sql
src/middlewares/: auth.rs
src/routes/: get_index.rs  get_login.rs  get_signup.rs  post_login.rs  post_signup.rs
src/structs/: struct_user.rs
src/templates/: registration.html
src/templates/components/: footer.js  header.js
templates/: index.html  login.html  registration.html
templates/components/: footer.templ  footer_templ.go  head.templ  head_templ.go  header.js  header.templ  header_templ.go
templates/errorPage/: index.templ  index_templ.go
templates/index/: index.templ  index_templ.go
templates/login/: index.templ  index_templ.go
templates/signup/: index.templ  index_templ.go
types/: commentType.go  patternType.go  userType.go
