[package]
name = "myog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.7.2"
jsonwebtoken = "9.2.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
uuid = "1.6.1"
dotenv = "0.15.0"
lettre = "0.11.2"
tracing-subscriber = "0.3.18"
tokio-postgres = "0.7.10"
