[package]
name = "myogcollection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
redis = "0.24.0"
postgres = "0.19.7"