[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#local dependencies
datatypes = { path = "../datatypes" }

# net dependencies
chrono = "0.4.31"
argon2 = "0.5.3"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie", "async-read-body"] }
tower = "0.4.13"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
redis = { version = "0.24.0", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "json" ] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
askama = "0.12.1"
lettre = "0.11.3"
common_regex_rs = "0.1.0"
log = "0.4.20"
aes = "0.8.3"
ipgeolocate = "0.3.5"



