[package]
name = "db_seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "json" ] }
datatypes = { path = "../datatypes" }
chrono = { varsion = "0.4.31", features = ["serde"] }